# arithmetic_nikasha

./: README.md  pyproject.toml
src/arithmetic_nikasha/: __init__.py  stuff.py
